# smartChess

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  finall.cpp  smartChess
include/: Board.h  Helper.h  Pieces.h  Selector.h  basePiece.h  data.h
src/: Board.cpp  Helper.cpp  Pieces.cpp  Selector.cpp  basePiece.cpp  main.cpp
